--- a/15-common-app-caveats.Rmd
+++ b/15-common-app-caveats.Rmd
@@ -18,12 +18,14 @@ library(shiny)
 library(lubridate)
 ui <- function(){
   tagList(
-    # Adding a first input which allow to select a specific date
+    # Adding a first input which allow 
+    # to select a specific date
     dateInput(
       "date", 
       "choose a date"
     ), 
-    # Adding a second input allowing to specify a year
+    # Adding a second input allowing 
+    # to specify a year
     selectInput(
       "year", 
       "Choose a year", 
@@ -37,7 +39,8 @@ server <- function(
   output, 
   session
 ){
-  # We want the year to be update whenever the dateInput is updated
+  # We want the year to be update whenever 
+  # the dateInput is updated
   observeEvent( input$date , {
     updateSelectInput(
       session, 
@@ -46,7 +49,8 @@ server <- function(
     )
   })
   
-  # We want the date to be update whenever the selectInput is updated
+  # We want the date to be update whenever 
+  # the selectInput is updated
   observeEvent( input$year , {
     updateDateInput(
       session, 
@@ -98,21 +102,25 @@ server <- function(
   output, 
   session
 ){
-  # Setting a reactiveValues list that will keep track of the latest changes
+  # Setting a reactiveValues list that will 
+  # keep track of the latest changes
   r <- reactiveValues(
     date = NULL, 
     year = NULL
   )
   
-  # When the date is changed, we set its value inside r$date
+  # When the date is changed,
+  #  we set its value inside r$date
   observeEvent( input$date , {
     r$date <- input$date
   }, ignoreInit = TRUE)
   
   # Whenever r$date is changed, we launch an observer
   observeEvent( r$date , {
-    # We use req() to control the update of the selectInput(), which 
-    # is updated only if the year of the input is different from the year
+    # We use req() to control the update 
+    # of the selectInput(), which 
+    # is updated only if the year of the 
+    # input is different from the year
     # of the date input
     req(year(r$date) != input$year)
     updateSelectInput(
@@ -129,8 +137,10 @@ server <- function(
   
   # Whenever r$year is changed, we launch an observer
   observeEvent( r$year , {
-    # We use req() to control the update of the dateInput(), which 
-    # is updated only if the year of the input is different from the year
+    # We use req() to control the update 
+    # of the dateInput(), which 
+    # is updated only if the year of the 
+    # input is different from the year
     # of the date input
     req(r$year != year(input$date))
     new_date <- input$date
@@ -172,14 +182,16 @@ library(shiny)
 library(cli)
 ui <- function(){
   tagList(
-    # We are adding a simple text input that will be printed to the console
+    # We are adding a simple text input 
+    # that will be printed to the console
     textInput("txt", "Text")
   )
 }
 
 server <- function(input, output, session){
   observe({
-    # Every time this reactive context is invalidated, we add 1 to the i value
+    # Every time this reactive context is invalidated, 
+    # we add 1 to the i value
     i <<- i + 1
     # We print the i value to the console, and the value of input$txt
     cat_rule(as.character(i))
@@ -198,16 +210,22 @@ library(shiny)
 library(cli)
 ui <- function(){
   tagList(
-    # We are adding a simple text input that will be printed to the console
+    # We are adding a simple text input 
+    # that will be printed to the console
     textInput("txt", "Text"),
     # We add a selectInput() to allow text transformation
-    selectInput("casefolding", "Casefolding", c("lower", "upper"))
+    selectInput(
+      "casefolding", 
+      "Casefolding", 
+      c("lower", "upper")
+    )
   )
 }
 
 server <- function(input, output, session){
   observe({
-    # Every time this reactive context is invalidated, we add 1 to the i value
+    # Every time this reactive context 
+    # is invalidated, we add 1 to the i value
     i <<- i + 1
     # We print the i value to the console
     cat_rule(as.character(i))
@@ -234,10 +252,15 @@ library(cli)
 library(stringi)
 ui <- function(){
   tagList(
-    # We are adding a simple text input that will be printed to the console
+    # We are adding a simple text input 
+    # that will be printed to the console
     textInput("txt", "Text"),
     # We add a selectInput() to allow text transformation
-    selectInput("casefolding", "Casefolding", c("lower", "upper")),
+    selectInput(
+      "casefolding", 
+      "Casefolding", 
+      c("lower", "upper")
+    )
     # A new checkbox to reverse (or not) the input text
     checkboxInput("rev", "reverse")
   )
@@ -245,7 +268,8 @@ ui <- function(){
 
 server <- function(input, output, session){
   observe({
-    # Every time this reactive context is invalidated, we add 1 to the i value
+    # Every time this reactive context 
+    # is invalidated, we add 1 to the i value
     i <<- i + 1
     # We print the i value to the console
     cat_rule(as.character(i))
@@ -279,10 +303,15 @@ library(cli)
 library(stringi)
 ui <- function(){
   tagList(
-    # We are adding a simple text input that will be printed to the console
+    # We are adding a simple text input 
+    # that will be printed to the console
     textInput("txt", "Text"),
     # We add a selectInput() to allow text transformation
-    selectInput("casefolding", "Casefolding", c("lower", "upper")),
+    selectInput(
+      "casefolding", 
+      "Casefolding", 
+      c("lower", "upper")
+    )
     # A new checkbox to reverse (or not) the input text
     checkboxInput("rev", "reverse")
   )
@@ -292,7 +321,8 @@ server <- function(input, output, session){
   # We are using a reactiveValues to keep this input value
   r <- reactiveValues()
   observe({
-    # Every time this reactive context is invalidated, we add 1 to the i value
+    # Every time this reactive context 
+    # is invalidated, we add 1 to the i value
     i <<- i + 1
     # We print the i value to the console
     cat_rule(as.character(i))
@@ -464,8 +494,8 @@ server <- function(
   
   observeEvent( input$reset , {
     # This resets x$results. This code block is here
-    # to show that reactivity is not triggered in this app unless
-    # a trigger() is called
+    # to show that reactivity is not triggered in this app 
+    # unless a trigger() is called
     x$results <-  0
     print(x$results)
   })
@@ -568,8 +598,8 @@ For example, let's say we have the following R6 generator:
 ```{r 15-common-app-caveats-10}
 MyData <- R6::R6Class(
   "MyData", 
-  # Defining our public methods, that will be the dataset container, 
-  # and a summary function
+  # Defining our public methods, that will be 
+  # the dataset container, and a summary function
   public = list(
     data = NULL,
     initialize = function(data){
@@ -595,11 +625,11 @@ test_that("R6 Class works", {
   expect_is(my_data, "R6")
   # And the summarize method to return a table
   expect_is(my_data$summarize(), "table")
-  # We would expect the data contained in the object to match the one 
-  # taken as input to new()
+  # We would expect the data contained in the object 
+  # to match the one taken as input to new()
   expect_equal(my_data$data, mtcars)
-  # And the summarize method to be equal to the summary() on the 
-  # input object
+  # And the summarize method to be equal to the summary()
+  #  on the input object
   expect_equal(my_data$summarize(), summary(mtcars))
 })
 ```
@@ -614,8 +644,12 @@ Getting a good sense of how reactivity is actually working in your app is not an
 `whereami::whereami()`'s [@R-whereami] goal is simple: informing you about where it is called, _i.e_ from what file and at which line, and how many times. 
 For example, if you add it inside a RMarkdown inside a book written with book (like the one you are reading now), you will get: 
 
-```{r 15-common-app-caveats-12}
+```{r 15-common-app-caveats-12, eval = FALSE}
 whereami::whereami()
+```
+
+```
+-- Running From: Console -------------------------------------
 ```
 
 Combining `cat_where()` will implement a reactive logging to your console while developing: that way, you can instantaneously know what reactive contexts are invalidated while using the application. 
@@ -666,7 +700,8 @@ For example, compare:
 library(shiny)
 ui <- function(){
   tagList(
-    # Adding a button with an onclick event, that will show or hide the plot
+    # Adding a button with an onclick event, 
+    # that will show or hide the plot
     actionButton(
       "change", 
       "show/hide graph", 
@@ -709,7 +744,7 @@ server <- function(
   output, 
   session
 ){
-
+  
   output$plot <- renderPlot({
     # Here, every time the button is clicked, this reactive 
     # context will be invalidated, and the code re-evaluated
@@ -806,7 +841,8 @@ ui <- function(){
   tagList(
     # We start the selectInput empty
     selectInput("species", "Species", choices = NULL), 
-    # The selectInput will be populate when the update button is pressed
+    # The selectInput will be populate 
+    # when the update button is pressed
     actionButton("update", "Update")
   )
 }
@@ -852,8 +888,8 @@ For example, in the following example, the `input$val` value will not be removed
 library(shiny)
 ui <- function(){
   tagList(
-    # Creating a text input that will be removed from the UI whenever
-    # the remove button is pressed
+    # Creating a text input that will be removed
+    #  from the UI whenever the remove button is pressed
     textInput("value", "Value", "place"),
     actionButton("remove", "Remove UI")
   )
@@ -866,12 +902,14 @@ server <- function(
 ){
   
   observeEvent( input$remove , {
-    # When the button is pressed, the textInput will be removed from the UI
+    # When the button is pressed,
+    #  the textInput will be removed from the UI
     removeUI(selector = "#value")
   })
   
   observe({
-    # We observe input$value every second. You'll realise that even after the UI
+    # We observe input$value every second. 
+    # You'll realise that even after the UI
     # is removed, input$value is still available.
     invalidateLater(1000)
     print(input$value)
