--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -497,7 +497,7 @@ And run the metric for `{golem}`,
 # saveRDS(f_golem, "data-raw/f_golem.RDS")
 ```
 
-```{r 01-big-shiny-27, cache=TRUE, warning=FALSE}
+```{r 01-big-shiny-27, cache=TRUE, warning=FALSE, eval = FALSE}
 # Using this function with{golem}
 frame_metric("golem") 
 ```
@@ -518,7 +518,7 @@ And `{shiny}`
 frame_metric("shiny") 
 ```
 
-```{r 01-big-shiny-5-bis, include = FALSE}
+```{r 01-big-shiny-5-bis, echo = FALSE}
 readRDS("data-raw/f_shiny.RDS")
 ```
 
