--- a/11-step-by-step-secure.Rmd
+++ b/11-step-by-step-secure.Rmd
@@ -186,27 +186,7 @@ test <- crrry::CrrryOnPage$new(
   # Do everything on the terminal, with no window open
   headless = TRUE
 )
-# We'll wait for the application to be ready to accept inputs
-test$wait_for_shiny_ready()
 ```
-
-```{r include = FALSE}
-# Creating a new test instance
-test <- crrry::CrrryOnPage$new(
-  # Using the `find_chrome()` function to guess where the 
-  # Chrome bin is on our machine
-  chrome_bin = pagedown::find_chrome(),
-  # Launching Chrome on a random available port on our machine
-  # Note that you will need httpuv >= 1.5.2 if you want to use 
-  # this function
-  chrome_port = httpuv::randomPort(), 
-  # Specifying the page we want to connect to
-  url = "https://connect.thinkr.fr/hexmake/",
-  # Do everything on the terminal, with no window open
-  headless = TRUE
-)
-```
-
 
 ```
 Running \
@@ -215,6 +195,17 @@ Running \
   '--user-data-dir=/Users/colin/Library/Application Support/
     r-crrri/chrome-data-dir-dhutmfux' \
   '--remote-debugging-port=40698'
+```
+
+
+```{r eval = FALSE}
+# We'll wait for the application to be ready to accept inputs
+test$wait_for_shiny_ready()
+```
+
+```
+Shiny is computing
+✓ Shiny is still running
 ```
 
 You can then call one of the `test` object methods: 
@@ -257,7 +248,7 @@ Shiny is computing
 
 And once your test is done, do not forget to close the connection!
 
-```{r 11-step-by-step-secure-5, eval = TRUE}
+```{r 11-step-by-step-secure-5, eval = FALSE}
 # Closing the connection
 test$stop()
 ```
@@ -323,7 +314,8 @@ If you are building your application with `{golem}` [@R-golem], you will need to
 ```{r 11-step-by-step-secure-8, eval = FALSE}
 # Create an app.R file at the root of the package
 golem::add_rstudioconnect_file()
-# Launch a test, and record a series of snapshots of your application
+# Launch a test, and record a series of 
+# snapshots of your application
 shinytest::recordTest()
 ```
 
@@ -625,16 +617,6 @@ Sys.sleep(60) # Let the container launch
 
 Then, a `{crrry}` job:
 
-```{r 11-step-by-step-secure-1-bis, include = FALSE}
-test <- crrry::CrrryOnPage$new(
-  chrome_bin = pagedown::find_chrome(),
-  chrome_port = httpuv::randomPort(),
-  url ="http://localhost:2708",
-  headless = TRUE
-)
-test$wait_for_shiny_ready()
-```
-
 
 ```{r 11-step-by-step-secure-35, eval = TRUE, echo = FALSE}
 # See previous version of this code for a commented explanation 
@@ -648,15 +630,17 @@ test$wait_for_shiny_ready()
 ```
 
 ```
-Running '/Applications/Google Chrome.app/Contents/MacOS/Google Chrome' 
+Running '/Applications/Google 
+  Chrome.app/Contents/MacOS/Google Chrome' 
   --no-first-run --headless \
   '--user-data-dir=/Users/colin/Library/Application     
   Support/r-crrri/chrome-data-dir-thyhpptv' \
   '--remote-debugging-port=48938'
 ```
 
-```{r eval = FALSE, echo = TRUE}
+```{r eval = FALSE, include = FALSE}
 # See previous version of this code for a commented explanation 
+sink()
 test <- crrry::CrrryOnPage$new(
   chrome_bin = pagedown::find_chrome(),
   chrome_port = httpuv::randomPort(),
@@ -664,6 +648,7 @@ test <- crrry::CrrryOnPage$new(
   headless = TRUE
 )
 test$wait_for_shiny_ready()
+sink()
 ```
 
 
