--- a/index.Rmd
+++ b/index.Rmd
@@ -187,7 +187,7 @@ Whatever the challenge, he remains reliable, constructive and efficient when it 
 ## Want to help? {-}
 
 Any feedback on the book is very welcome. 
-Feel free to [open an issue](https://github.com/ThinkR-open/building-shiny-apps-workflow/issues), or to make a Pull Request if you spot a typo.
+Feel free to [open an issue](https://github.com/ThinkR-open/building-shiny-apps-workflow/issues) if you spot a typo, or if you have any idea for enhancing some parts of this book.
 
 ## Other resources {-}
 
